--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -1,7 +1,8 @@
 .container-fluid {
+  background-color: #fffaf5;
   font-family: Calibri, Candara, Segoe, 'Segoe UI', Optima, Arial, sans-serif;
 }
- 
+
 .scrollable {
   height: 600px;
   overflow: scroll;
@@ -11,8 +12,6 @@
 #new-event-wrapper,
 #new-task-wrapper,
 #schedule-result-wrapper {
-  background-color: #fffaf5;
-  border-radius: 50px;
   padding: 2%;
 }
  
@@ -20,9 +19,21 @@
   background-color: #dae8fe;
   width: 100%;
 }
+
+.btn-primary {
+  margin-top: 2px;
+}
+.card {
+  margin-bottom: 15px; 
+}
  
-#new-event-list-wrapper {
-  width: 80%;
+#calendar-view {
+  min-height: 800px;
+  width: 100%;
+}
+
+.navbar-item {
+  margin: 3%;
 }
  
 #calendar-view {
